# packagecake

./: .flake8  .gitignore  README.md  dev.requirements.txt  pyproject.toml  setup.cfg
src/packagecake/: __init__.py  __main__.py  bakery.py  pypi_cake_stats.py
tools/: pre-commit
