[metadata]
name = packagecake
version = attr: packagecake.__version__
author = Tom Saunders
license = MIT
license_files = LICENSE
description = Turn your Python package into a delicious cake
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sirfuzzalot/packagecake/

project_urls =
    Tracker = https://github.com/sirfuzzalot/packagecake/issues
    Documentation = https://github.com/sirfuzzalot/packagecake/blob/main/README.md
    Source = https://github.com/sirfuzzalot/packagecake/

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests >= 2

[options.packages.find]
where = src
